--- a/bibliotecaAngelRosaldo/appsettings.json
+++ b/bibliotecaAngelRosaldo/appsettings.json
@@ -7,6 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-GBEQ9PQ; initial catalog= BibliotecaAngel; Integrated Security= True; Encrypt= False; "
+        "DefaultConnection": "Data Source= DESKTOP-GBEQ9PQ\\BDANGEL; initial catalog= BibliotecaAngelRosaldo83; Integrated Security= True; Encrypt= False; "
 
     }
+}
